# lerf

./: .gitignore  README.md  debug.sh  eval.sh  kitchen_script.sh  lerf_train_script.sh  lerf_visualization.ipynb  pretrain_script.sh  pyproject.toml  render_script.sh  run_hqsam.sh  run_sam.sh  samnerf_visualization.ipynb  teatime_script.sh  test_script.sh  train_script.sh
lerf/: lerf.py  lerf_config.py  lerf_field.py  lerf_pipeline.py  lerf_trainer.py
lerf/data/: lerf_datamanager.py
samnerf/: helper.py  samnerf.py  samnerf_config.py  samnerf_field.py  samnerf_fieldheadnames.py  samnerf_pipeline.py  samnerf_trainer.py
samnerf/data/: samnerf_datamanager.py
samnerf/data/utils/: patch_embedding_dataloader.py  pyramid_embedding_dataloader.py  sam_dataloader.py
samnerf/encoders/: clip_encoder.py  openclip_encoder.py
samnerf_v2/: lerf.py  lerf_field.py  lerf_fieldheadnames.py  lerf_pipeline.py  lerf_renderers.py  sam_pipeline.py  samnerf.py  samnerf_config.py  samnerf_field.py  samnerf_pipeline.py  samnerf_trainer.py
samnerf_v2/data/: lerf_datamanager.py  sam_datamanager.py
samnerf_v2/data/utils/: dino_dataloader.py  hqsam_datalodaer.py  patch_embedding_dataloader.py  pyramid_embedding_dataloader.py  sam_datalodaer.py  xdecoder_dataloader.py
samnerf_v2/encoders/: clip_encoder.py  hqsam_encoder.py  image_encoder.py  openclip_encoder.py  sam_encoder.py  xdecoder_encoder.py
