[project]
name = "samnerf_v2"
version = "0.0.1"

dependencies=[
    "open_clip_torch",
    "timm",
    "ftfy",
    "regex",
    "tqdm",
    "clip @ git+https://github.com/openai/CLIP.git",
    "nerfstudio>=0.3.0"
]



[tool.setuptools.packages.find]
include = ["samnerf_v2*", "lerf*"]


[project.entry-points.'nerfstudio.method_configs']
samnerf_v2 = 'samnerf_v2.samnerf_config:samnerf_method'
lerf = 'lerf.lerf_config:lerf_method'
lerf_big = 'lerf.lerf_config:lerf_method_big'
lerf_lite = 'lerf.lerf_config:lerf_method_lite'